# quick-summary

./: .env.example  .gitignore  README.md  api_server.py  generate_icon.py  install.sh  main.py  package.json  quick-summary-api.spec  quick-summary.spec  requirements.txt  shortcut_summary.applescript  start-applescript.sh  start-full-web.sh  start-tauri-dev.sh  start-web.sh  summarize-auto.sh  summarize-once.sh
config/: config.yaml
docs/: BATCH1_SUMMARY.md  BATCH2_CHECKLIST.md  BATCH2_SUMMARY.md  DESKTOP_APP_GUIDE.md  FRONTEND_REQUIREMENTS.md  NEW_FEATURES.md  PROJECT_SUMMARY.md  QUICKSTART.md  ROADMAP.md  USAGE_GUIDE.md
logs/: .gitkeep
src/: auto_selector.py  main.py  summarizer.py  utils.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: test_basic.py
ui/: index.html
